--- a/css/resume.scss
+++ b/css/resume.scss
@@ -661,14 +661,18 @@ ul {
   }
 
   .card-img-1 {
-    background-image: url('../img/my-resume.png');
+    background-image: url('/img/my-resume.png');
   }
 
   .card-img-2 {
-    background-image: url('../img/the-wheel.png');
+    background-image: url('/img/the-wheel.png');
+  }
+  
+  .card-img-3{
+    background-image: url('/img/youbikeSearch.png');
   }
 
-  .card-img-3 {
+  .card-img-0 {
     background-image: url('https://images.unsplash.com/reserve/oIpwxeeSPy1cnwYpqJ1w_Dufer%20Collateral%20test.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1516&q=80');
   }
 
