--- a/css/youbikeSearch-rwd.css
+++ b/css/youbikeSearch-rwd.css
@@ -1,183 +1,143 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
-body .box {
-  height: 100vh;
-  width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-body .box .map {
-  height: 100%;
-  width: 70%;
-}
-
-body .box .sideNav {
-  height: 100vh;
-  width: 30%;
-  background: whitesmoke;
-  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  z-index: 2;
-}
-
-body .box .sideNav .navBar {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 10%;
-  background: #ffc107;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 1.5rem;
-}
-
-body .box .sideNav .navBar .bikeIcon {
-  padding-left: 0.2rem;
-}
-
-body .box .sideNav .searchBar {
-  height: 20%;
-  padding: 1rem;
-}
-
-body .box .sideNav .searchBar .inputArea {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-body .box .sideNav .searchBar #districtMenu {
-  background-color: #fff;
-  color: #000;
-  padding: 12px;
-  width: auto;
-  height: 37px;
-  border: 1px solid #E8EAED;
-  outline: none;
-  margin: 0.5rem 0.25rem 1rem 0;
-}
-
-body .box .sideNav .searchBar #districtMenu option {
-  padding: 30px;
-}
-
-body .box .sideNav .searchBar #keyword {
-  margin: 0.5rem 0rem 1rem 0.25rem;
-  border: 1px solid #E8EAED;
-}
-
-body .box .sideNav #searchResultBlock {
-  height: 70%;
-  overflow: scroll;
-}
-
-body .box .sideNav #searchResultBlock .stationBlock {
-  background: #fff;
-  margin: 1rem 0;
-  padding: 1rem;
-  border-top: 1px solid #E8EAED;
-  border-bottom: 1px solid #E8EAED;
-  color: #70757A;
-}
-
-body .box .sideNav #searchResultBlock .stationBlock p {
-  margin: 0;
-}
-
-body .box .sideNav #searchResultBlock .stationBlock .stationInfo {
-  margin-right: 1rem;
-}
-
-body .box .sideNav #searchResultBlock .stationBlock .goToBtn {
-  float: right;
-  background: #fb6521;
-  border: none;
-  color: #fff;
-}
-
-body .box .sideNav #searchResultBlock .stationBlock .goToBtn:hover {
-  background: #ce531b;
-}
-
-body .modal .loader {
-  position: relative;
-  text-align: center;
-  margin: 15px auto 35px auto;
-  z-index: 9999;
-  display: block;
-  width: 80px;
-  height: 80px;
-  border: 10px solid rgba(0, 0, 0, 0.3);
-  border-radius: 50%;
-  border-top-color: #000;
-  animation: spin 1s ease-in-out infinite;
-  -webkit-animation: spin 1s ease-in-out infinite;
-}
-
-@keyframes spin {
-  to {
-    -webkit-transform: rotate(360deg);
+@media only screen and (max-width: 375px) and (-webkit-min-device-pixel-ratio: 1) {
+  body .box {
+    height: 100vh;
+    width: 100vw;
   }
-}
-
-@-webkit-keyframes spin {
-  to {
-    -webkit-transform: rotate(360deg);
+  body .box .map {
+    height: 100%;
+    width: 100%;
   }
-}
-
-body .modal .modal-content {
-  border-radius: 0px;
-  -webkit-box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
-          box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
-}
-
-body .modal .modal-backdrop.show {
-  opacity: 0.85;
-}
-
-body .modal .loader-txt p {
-  font-size: 13px;
-  color: #70757A;
-}
-
-body .modal #output {
-  padding: 25px 15px;
-  background: #222;
-  border: 1px solid #222;
-  max-width: 350px;
-  margin: 35px auto;
-  font-family: 'Roboto', sans-serif !important;
-}
-
-body .modal #output p.subtle {
-  color: #555;
-  font-style: italic;
-  font-family: 'Roboto', sans-serif !important;
-}
-
-body .modal #output h4 {
-  font-weight: 300 !important;
-  font-size: 1.1em;
-  font-family: 'Roboto', sans-serif !important;
-}
-
-body .modal #output p {
-  font-family: 'Roboto', sans-serif !important;
-  font-size: 0.9em;
-}
-
-body .modal #output p b {
-  text-transform: uppercase;
-  text-decoration: underline;
+  body .box .sideNav {
+    position: fixed;
+    top: 0px;
+    height: 50vh;
+    width: 100%;
+    background: whitesmoke;
+    -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    z-index: 2;
+  }
+  body .box .sideNav .navBar {
+    display: none;
+  }
+  body .box .sideNav .searchBar {
+    height: auto;
+    padding: 0.3rem;
+  }
+  body .box .sideNav .searchBar .inputArea {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  body .box .sideNav .searchBar .inputArea #districtMenu {
+    background-color: #fff;
+    color: #000;
+    padding: 12px;
+    width: auto;
+    height: 45px;
+    border: 1px solid #E8EAED;
+    outline: none;
+    margin: 0.5rem 0.25rem 1rem 0;
+  }
+  body .box .sideNav .searchBar .inputArea #districtMenu option {
+    padding: 30px;
+  }
+  body .box .sideNav .searchBar .inputArea #keyword {
+    height: 45px;
+    margin: 0.5rem 0rem 1rem 0.25rem;
+    border: 1px solid #E8EAED;
+  }
+  body .box .sideNav .searchBar #searchBtn {
+    display: none;
+  }
+  body .box .sideNav #searchResultBlock {
+    height: 80%;
+    overflow: scroll;
+  }
+  body .box .sideNav #searchResultBlock .stationBlock {
+    background: #fff;
+    margin: 0.2rem 0;
+    padding: 1rem;
+    border-top: 1px solid #E8EAED;
+    border-bottom: 1px solid #E8EAED;
+    color: #70757A;
+  }
+  body .box .sideNav #searchResultBlock .stationBlock p {
+    margin: 0;
+  }
+  body .box .sideNav #searchResultBlock .stationBlock .stationInfo {
+    margin-right: 1rem;
+  }
+  body .box .sideNav #searchResultBlock .stationBlock .goToBtn {
+    float: right;
+    background: #fb6521;
+    border: none;
+    color: #fff;
+  }
+  body .box .sideNav #searchResultBlock .stationBlock .goToBtn:hover {
+    background: #ce531b;
+  }
+  body .modal .loader {
+    position: relative;
+    text-align: center;
+    margin: 15px auto 35px auto;
+    z-index: 9999;
+    display: block;
+    width: 80px;
+    height: 80px;
+    border: 10px solid rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+    border-top-color: #000;
+    animation: spin 1s ease-in-out infinite;
+    -webkit-animation: spin 1s ease-in-out infinite;
+  }
+  @keyframes spin {
+    to {
+      -webkit-transform: rotate(360deg);
+    }
+  }
+  @-webkit-keyframes spin {
+    to {
+      -webkit-transform: rotate(360deg);
+    }
+  }
+  body .modal .modal-content {
+    border-radius: 0px;
+    -webkit-box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
+            box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
+  }
+  body .modal .modal-backdrop.show {
+    opacity: 0.85;
+  }
+  body .modal .loader-txt p {
+    font-size: 13px;
+    color: #70757A;
+  }
+  body .modal #output {
+    padding: 25px 15px;
+    background: #222;
+    border: 1px solid #222;
+    max-width: 350px;
+    margin: 35px auto;
+    font-family: 'Roboto', sans-serif !important;
+  }
+  body .modal #output p.subtle {
+    color: #555;
+    font-style: italic;
+    font-family: 'Roboto', sans-serif !important;
+  }
+  body .modal #output h4 {
+    font-weight: 300 !important;
+    font-size: 1.1em;
+    font-family: 'Roboto', sans-serif !important;
+  }
+  body .modal #output p {
+    font-family: 'Roboto', sans-serif !important;
+    font-size: 0.9em;
+  }
+  body .modal #output p b {
+    text-transform: uppercase;
+    text-decoration: underline;
+  }
 }
 /*# sourceMappingURL=youbikeSearch-rwd.css.map */
