--- a/css/youbikeSearch-rwd.scss
+++ b/css/youbikeSearch-rwd.scss
@@ -3,177 +3,178 @@ $light-gray: #E8EAED;
 $lighter-gray: rgb(245, 245, 245);
 $bs-warning: #ffc107;
 
-body {
-  margin: 0;
-  padding: 0;
+@media only screen and (max-width: 375px) and (-webkit-min-device-pixel-ratio: 1) {
+  body {
+    // margin: 0;
+    // padding: 0;
 
-  .box {
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-
-    .map {
-      height: 100%;
-      width: 70%;
-    }
-
-    .sideNav {
+    .box {
       height: 100vh;
-      width: 30%;
-      background: $lighter-gray;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-      z-index: 2;
+      width: 100vw;
+      // display: flex; 
 
-      .navBar {
-        display: flex;
-        height: 10%;
-        background: $bs-warning;
-        justify-content: center;
-        align-items: center;
-        font-size: 1.5rem;
-
-        .bikeIcon {
-          padding-left: 0.2rem;
-        }
+      .map {
+        height: 100%;
+        width: 100%;
       }
 
-      .searchBar {
-        height: 20%;
-        padding: 1rem;
+      .sideNav {
+        // display: none;
+        position: fixed;
+        top: 0px;
+        height: 50vh;
+        width: 100%;
+        background: $lighter-gray;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        z-index: 2;
 
-        .inputArea {
-          display: flex;
+        .navBar {
+          display: none;
         }
 
-        #districtMenu {
-          background-color: #fff;
-          color: #000;
-          padding: 12px;
-          width: auto;
-          height: 37px;
-          border: 1px solid $light-gray;
-          outline: none;
-          margin: 0.5rem 0.25rem 1rem 0;
-        }
+        .searchBar {
+          height: auto;
+          padding: 0.3rem;
 
-        #districtMenu option {
-          padding: 30px;
-        }
+          .inputArea {
+            display: flex;
 
-        #keyword {
-          margin: 0.5rem 0rem 1rem 0.25rem;
-          border: 1px solid $light-gray;
-        }
 
-      }
+            #districtMenu {
+              background-color: #fff;
+              color: #000;
+              padding: 12px;
+              width: auto;
+              height: 45px;
+              border: 1px solid $light-gray;
+              outline: none;
+              margin: 0.5rem 0.25rem 1rem 0;
+            }
 
-      #searchResultBlock {
-        height: 70%;
-        overflow: scroll;
+            #districtMenu option {
+              padding: 30px;
+            }
 
-        .stationBlock {
-          background: #fff;
-          margin: 1rem 0;
-          padding: 1rem;
-          border-top: 1px solid $light-gray;
-          border-bottom: 1px solid $light-gray;
-          color: $gray;
-
-          p {
-            margin: 0;
+            #keyword {
+              height: 45px;
+              margin: 0.5rem 0rem 1rem 0.25rem;
+              border: 1px solid $light-gray;
+            }
           }
 
-          .stationInfo {
-            margin-right: 1rem;
+          #searchBtn {
+            display: none;
           }
+        }
 
-          .goToBtn {
-            float: right;
-            background: rgb(251, 101, 33);
-            border: none;
-            color: #fff;
+        #searchResultBlock {
+          height: 80%;
+          overflow: scroll;
 
-            &:hover {
-              background: rgb(206, 83, 27);
+          .stationBlock {
+            background: #fff;
+            margin: 0.2rem 0;
+            padding: 1rem;
+            border-top: 1px solid $light-gray;
+            border-bottom: 1px solid $light-gray;
+            color: $gray;
+
+            p {
+              margin: 0;
+            }
+
+            .stationInfo {
+              margin-right: 1rem;
+            }
+
+            .goToBtn {
+              float: right;
+              background: rgb(251, 101, 33);
+              border: none;
+              color: #fff;
+
+              &:hover {
+                background: rgb(206, 83, 27);
+              }
             }
           }
         }
-      }
 
-    }
-  }
-
-  .modal {
-    .loader {
-      position: relative;
-      text-align: center;
-      margin: 15px auto 35px auto;
-      z-index: 9999;
-      display: block;
-      width: 80px;
-      height: 80px;
-      border: 10px solid rgba(0, 0, 0, .3);
-      border-radius: 50%;
-      border-top-color: #000;
-      animation: spin 1s ease-in-out infinite;
-      -webkit-animation: spin 1s ease-in-out infinite;
-    }
-
-    @keyframes spin {
-      to {
-        -webkit-transform: rotate(360deg);
       }
     }
 
-    @-webkit-keyframes spin {
-      to {
-        -webkit-transform: rotate(360deg);
+    .modal {
+      .loader {
+        position: relative;
+        text-align: center;
+        margin: 15px auto 35px auto;
+        z-index: 9999;
+        display: block;
+        width: 80px;
+        height: 80px;
+        border: 10px solid rgba(0, 0, 0, .3);
+        border-radius: 50%;
+        border-top-color: #000;
+        animation: spin 1s ease-in-out infinite;
+        -webkit-animation: spin 1s ease-in-out infinite;
       }
-    }
 
-    .modal-content {
-      border-radius: 0px;
-      box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
-    }
-
-    .modal-backdrop.show {
-      opacity: 0.85;
-    }
-
-    .loader-txt {
-      p {
-        font-size: 13px;
-        color: $gray;
+      @keyframes spin {
+        to {
+          -webkit-transform: rotate(360deg);
+        }
       }
-    }
 
-    #output {
-      padding: 25px 15px;
-      background: #222;
-      border: 1px solid #222;
-      max-width: 350px;
-      margin: 35px auto;
-      font-family: 'Roboto', sans-serif !important;
+      @-webkit-keyframes spin {
+        to {
+          -webkit-transform: rotate(360deg);
+        }
+      }
 
-      p.subtle {
-        color: #555;
-        font-style: italic;
+      .modal-content {
+        border-radius: 0px;
+        box-shadow: 0 0 20px 8px rgba(0, 0, 0, 0.7);
+      }
+
+      .modal-backdrop.show {
+        opacity: 0.85;
+      }
+
+      .loader-txt {
+        p {
+          font-size: 13px;
+          color: $gray;
+        }
+      }
+
+      #output {
+        padding: 25px 15px;
+        background: #222;
+        border: 1px solid #222;
+        max-width: 350px;
+        margin: 35px auto;
         font-family: 'Roboto', sans-serif !important;
-      }
 
-      h4 {
-        font-weight: 300 !important;
-        font-size: 1.1em;
-        font-family: 'Roboto', sans-serif !important;
-      }
+        p.subtle {
+          color: #555;
+          font-style: italic;
+          font-family: 'Roboto', sans-serif !important;
+        }
 
-      p {
-        font-family: 'Roboto', sans-serif !important;
-        font-size: 0.9em;
+        h4 {
+          font-weight: 300 !important;
+          font-size: 1.1em;
+          font-family: 'Roboto', sans-serif !important;
+        }
 
-        b {
-          text-transform: uppercase;
-          text-decoration: underline;
+        p {
+          font-family: 'Roboto', sans-serif !important;
+          font-size: 0.9em;
+
+          b {
+            text-transform: uppercase;
+            text-decoration: underline;
+          }
         }
       }
     }
